kubernetes/orion/manifests/monitoring/loki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  annotations:
    pod-security.kubernetes.io/enforce: "restricted"
    pod-security.kubernetes.io/enforce-version: "latest"
    pod-security.kubernetes.io/default-seccomp-profile: "runtime/default"
